feat: auth system implemented